force-app/main/default/objects/Ringfence__c/Ringfence__c.object-meta.xml
<CustomObject>
    <description>Used to record when ringfences have been applied against a financial product, in the context of fulfilment.</description>
    <label>Ringfence</label>
    <nameField>
        <displayFormat>RF-{0000000}</displayFormat>
        <label>Ringfence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ringfences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>