force-app/main/default/objects/Ringfence__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount of ringfence applied to this financial product specifically in relation to this fulfilment.</description>
    <inlineHelpText>The amount of ringfence applied to this financial product specifically in relation to this fulfilment.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>