force-app/main/default/objects/Ringfence__c/fields/Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The fulfilment that required this ringfence.</description>
    <label>Fulfilment</label>
    <referenceTo>Fulfilment__c</referenceTo>
    <relationshipLabel>Ringfences</relationshipLabel>
    <relationshipName>Ringfences</relationshipName>
    <type>Lookup</type>
</CustomField>