force-app/main/default/objects/Ringfence__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>The reason this ringfence was applied or updated.</description>
    <inlineHelpText>The reason this ringfence was applied or updated.</inlineHelpText>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>